Feat/components/card

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,7 +10,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-	background-color: #686B72;
+  background-color: #686b72;
 }
 
 .footer {
