--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,23 +3,23 @@
 @tailwind utilities;
 
 @layer base {
-	html,
-	body {
-		padding: 0;
-		margin: 0;
-		font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-			Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-		background-color: #161616;
-	}
-	
-	a {
-		color: inherit;
-		text-decoration: none;
-	}
-	
-	* {
-		box-sizing: border-box;
-	}
+  html,
+  body {
+    padding: 0;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    background-color: #161616;
+  }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  * {
+    box-sizing: border-box;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
@@ -32,4 +32,5 @@
   }
 }
 
-@layer components {}
+@layer components {
+}
